# api-for-gemini

./: .gitignore  AGENTS.md  LICENSE  README.md  README_cn.md  main.py  pyproject.toml
.gemini/: settings.json
.github/workflows/: publish.yml
api_for_gemini/: __init__.py  config.example.toml
api_for_gemini/app/: main.py
api_for_gemini/app/commands/: __init__.py  config.py  context.py  setup.py  start.py  ui.py
api_for_gemini/app/utils/: settings.py
api_for_gemini/server/: main.py
api_for_gemini/server/api/: generateContent.py  generateStreaming.py  probe.py  status.py
api_for_gemini/server/schema/: response.py
api_for_gemini/server/schema/model/: __init__.py  base.py  deepseek.py  google.py  openai.py
api_for_gemini/server/utils/: aiclient.py  config.py  data_store.py  headers.py  logger.py  types.py
api_for_gemini/ui/: main.py
api_for_gemini/utils/: logger.py  path.py  stars.py
example/: cli_sent.json  standard.jsonl
server/: main.py
server/api/: generateContent.py  generateStreaming.py  probe.py
server/schema/: request.py  response.py
server/schema/model/: __init__.py  base.py  deepseek.py  google.py  openai.py  to_gemini.py  to_openai.py  transfer.py
server/schema/request/: google.py
server/schema/response/: google.py
server/utils/: aiclient.py  config.py  data_store.py  logger.py
tests/: check_config.py  ds_datamodel.py  gemini_request.py  google_datamodel.py  google_request.py  openai_datamodel.py  starmatch_exhaustive.py  verify_tokens.py
