[project]
name = "api-for-gemini"
dynamic = ["version"]
description = "Use custom provider to API proxy for Gemini CLI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.34.0",
    "uvloop>=0.22.0; sys_platform != 'win32'",
    "httptools>=0.7.0",
    "google-genai>=1.14.0",
    "openai>=2.38.0",
    "tomli>=2.4.1; python_version < '3.12'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION.txt"
pattern = "(?P<version>.*)"

[tool.hatch.build.targets.wheel]
packages = ["server"]
