[project]
name = "api-for-gemini"
dynamic = ["version"]
description = "Gemini API proxy for routing requests to Google or OpenAI-compatible backends"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Wu Junkai", email = "wu.junkai@qq.com" }
]
keywords = ["gemini", "openai", "deepseek", "proxy", "api", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.34.0",
    "uvloop>=0.22.0; sys_platform != 'win32'",
    "httptools>=0.7.0",
    "google-genai>=2.8.0",
    "openai>=2.38.0",
    "tomli>=2.4.1; python_version < '3.12'",
]

[project.urls]
Homepage = "https://github.com/WuJunkai2004/api-for-gemini"
Repository = "https://github.com/WuJunkai2004/api-for-gemini"
Issues = "https://github.com/WuJunkai2004/api-for-gemini/issues"

[project.scripts]
gema = "api_for_gemini.app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION.txt"
pattern = "(?P<version>.*)"

[tool.hatch.build.targets.wheel]
packages = ["api_for_gemini"]

[tool.hatch.build.targets.sdist]
include = [
    "/api_for_gemini",
    "/VERSION.txt",
    "/README.md",
    "/LICENSE",
]
